--- a/metropolis-beamer/custom.scss
+++ b/metropolis-beamer/custom.scss
@@ -154,6 +154,8 @@ $authors-block-gap: 4em !default;
   #title-slide .subtitle, 
   div.reveal div.slides section.quarto-title-block .subtitle {
     margin-bottom: 1.5rem;
+    // margin-top: 2em;
+     color: $secondary-color;
   }
   
   .slide-background.title-slide {
